# Sparkle

./: .gitignore  .gitmodules  CMakeLists.txt
Scripts/: build-mingw.bat  build-msys2.bat  build-vs.bat
Sparkle/: CMakeLists.txt  Core.h  Sparkle.h
Sparkle/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sparkle/Framework/: Application.cpp  Application.h  EntryPoint.cpp  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h  main.cpp
Sparkle/Macro/: Macro.h
Sparkle/PCH/: PCH.h
Sparkle/Platform/Vulkan/: Attachment.h  Common.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
Sparkle/Platform/Window/: GLFWWindow.cpp  GLFWWindow.h
Sparkle/Render/: Descriptor.h  Format.h  Queue.h  Render.cpp  Render.h  RenderContext.cpp  RenderContext.h  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.h  Texture.h  Type.h
